--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -8,32 +8,17 @@
     <meta content="ALL" name="ROBOTS"/>
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
     <%= stylesheet_link_tag "p", "tip-green", "tip-skyblue" -%>
-    <%= javascript_include_tag "jquery-1.4.4.min", "jquery.easing.1.3", "jquery.timer", "jquery.poshytip.min",
-      "jquery.json-2.2.min", "swfobject", "jsxmlsocket", "jquery.tmpl.min", "jquery.poshytip.min", "jquery.jplayer.min",
-      "g", "p", "login", "game", "socket" , "snumber" -%>
-
   </head>
   <body>
     <div id="wrapper">
-      <div id="content">
-        <img src="/images/logo.png" title="secret_cap" alt="secret_cap" id="logo" />
-        <div id="menu">
-          <a id="login_btn" href="javascript: void(0);">登录</a>
-          <a class="signup_btn" href="javascript: void(0);">注册</a>
-          <a class="goto_lobby" href="javascript: void(0);">Lobby</a>
-          <a href="/logout">Logout</a>
-        </div>
-        <div id="play_bg">
-        </div>
-        <div id="playground">
-<%#= render :partial => "layouts/signin_signup" -%>
-<%#= render :partial => "layouts/lobby" -%>
-          <%= render :partial => "layouts/game" -%>
-        </div>
-      </div>
-<%#= render :partial => "layouts/bottom" -%>
       <%= yield :layout -%>
+      <%= render :partial => 'layouts/bottom' %>
     </div>
+    <%= javascript_include_tag "jquery-1.4.4.min", "jquery.easing.1.3", "jquery.timer", "jquery.poshytip.min",
+      "jquery.json-2.2.min", "swfobject", "jsxmlsocket", "jquery.tmpl.min", "jquery.poshytip.min", "jquery.jplayer.min",
+      "g", "p", "login", "game", "socket" , "snumber" -%>
+    <%= yield :javascripts %>
+    <%= yield :audios %>
     <script type="text/javascript">
       var cookies_login = false, init_player_data;
       function initSetLoginData(s, d) {cookies_login = s; init_player_data = d;};
