--- a/app/views/layouts/_game.html.erb
+++ b/app/views/layouts/_game.html.erb
@@ -6,7 +6,7 @@
     </div>
   </div>
   <div id="map" style="margin-bottom: 20px;cursor:move;">
-    <img id="current_map" src="/images/map1.png" alt="map1" />
+    <img id="current_map" src="/images/maps/long_cun_zheng_2.jpg" alt="map1" />
     <!--<img id="current_map" src="/images/map2.jpg" alt="map1" />-->
   </div>
   <div id="debug">
