--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -15,7 +15,7 @@
       <%= render :partial => 'layouts/bottom' %>
     </div>
     <%= javascript_include_tag "jquery-1.4.4.min", "jquery.easing.1.3", "jquery.timer", "jquery.poshytip.min",
-      "jquery.json-2.2.min", "swfobject", "jsxmlsocket", "jquery.tmpl.min", "jquery.poshytip.min", "jquery.jplayer.min",
+      "jquery.json-2.2.min", "swfobject", "jsxmlsocket", "jquery.tmpl.min", "jquery.poshytip.min", "jquery.jplayer.min", "jquery.animate-colors",
       "g", "p", "login", "game", "socket" , "snumber" -%>
     <%= yield :javascripts %>
     <%= yield :audios %>
