--- a/app/views/layouts/_game.html.erb
+++ b/app/views/layouts/_game.html.erb
@@ -1,13 +1,18 @@
-<div id="game" style="display: block;">
+<div id="game">
   <div style="height: 50px;" id="coord">
   </div>
   <div id="hp_container" style="margin: 10px 0;">
     <div id="hp_bar" hp="7" style="width: 230px;height: 28px;background: url(/images/hp.png) no-repeat left top;">
     </div>
   </div>
-  <div id="map" style="margin-bottom: 20px;cursor:move;">
-    <img id="current_map" src="/images/maps/long_cun_zheng_2.jpg" alt="map1" />
-    <!--<img id="current_map" src="/images/map2.jpg" alt="map1" />-->
+  <div style="position: relative;height: 380px;">
+    <div id="map" style="cursor:move;margin: 5px;position: absolute;top: 3px;left: 2px;">
+      <img id="current_map" src="/images/maps/long_cun_zheng_2.jpg" alt="map1" style="position: absolute;" />
+      <div id="box" style="position: absolute;width:720px;height: 360px;"></div>
+      <!--<img id="current_map" src="/images/maps/map1.png" alt="map1" />-->
+    </div>
+    <div id="playboard" style="height:366px;width: 725px;border: 2px solid #EB1A4E;position: absolute;top: 0px;left: 0px;z-index: -1;"></div>
+    <div id="playboard_outer" style="position: absolute;height:366px;width: 725px;border: 2px solid #EB1A4E;top: 6px;left: 5px;z-index: -1;"></div>
   </div>
   <div id="debug">
   </div>
@@ -58,6 +63,13 @@
           })
         });
         $("#bomb_audio").jPlayer('play');
+      })
+
+      $('.box').live('mouseover', function(){
+        $(this).css({backgroundColor: '#DDD', opacity: .6})
+      })
+      .live('mouseout', function(){
+        $(this).css({backgroundColor: 'transparent'});
       })
     })
   </script>
