--- a/app/views/layouts/_game.html.erb
+++ b/app/views/layouts/_game.html.erb
@@ -11,12 +11,12 @@
       <div id="box" style="position: absolute;width:720px;height: 360px;"></div>
       <!--<img id="current_map" src="/images/maps/map1.png" alt="map1" />-->
     </div>
-    <div id="playboard" style="height:366px;width: 725px;border: 2px solid #EB1A4E;position: absolute;top: 0px;left: 0px;z-index: -1;"></div>
-    <div id="playboard_outer" style="position: absolute;height:366px;width: 725px;border: 2px solid #EB1A4E;top: 6px;left: 5px;z-index: -1;"></div>
+    <div id="playboard" from_color="#3B3A3A" to_color="#5C5A5A" style="height:366px;width: 725px;border: 2px solid #3B3A3A;position: absolute;top: 0px;left: 0px;z-index: -1;"></div>
+    <div id="playboard_outer" from_color="#3B3A3A" to_color="#5C5A5A" style="position: absolute;height:366px;width: 725px;border: 2px solid #3B3A3A;top: 6px;left: 5px;z-index: -1;"></div>
   </div>
   <div id="debug">
   </div>
-  <div id="map_point" style="text-align:center;color: white;position: absolute;width: 100px;height: 20px;background: red;opacity: 0.6">
+  <div id="map_point" style="display: none;text-align:center;color: white;position: absolute;width: 100px;height: 20px;background: red;opacity: 0.6">
   </div>
 
   <!-- use -->
@@ -47,7 +47,8 @@
         bodyPoint.y = e.pageY;
       })
 
-      $("#map " + current_map_ele).mousemove(function(e){
+      //$("#map " + current_map_ele).mousemove(function(e){
+      $("#box").mousemove(function(e){
         mapPoint.x = e.pageX - mapOffset.x;
         mapPoint.y = e.pageY - mapOffset.y;
         //$('#map_point').html(mapPoint.x +', '+ mapPoint.y).followMouse({offsetX: 60, offsetY: 25});
@@ -65,12 +66,18 @@
         $("#bomb_audio").jPlayer('play');
       })
 
+      //place box
+      $('#map').gPlaceBox();
+      //box event
       $('.box').live('mouseover', function(){
-        $(this).css({backgroundColor: '#DDD', opacity: .6})
+        $(this).css({backgroundColor: '#DB1445', opacity: .6})
       })
       .live('mouseout', function(){
         $(this).css({backgroundColor: 'transparent'});
       })
+      //blink map border
+      $('#playboard').gaHL('playboard_timer');
+      $.timer(540, function(){ $('#playboard_outer').gaHL('playboard_timer_2') })
     })
   </script>
 <% end %>
