--- a/app/views/layouts/_game.html.erb
+++ b/app/views/layouts/_game.html.erb
@@ -7,9 +7,9 @@
   </div>
   <div style="position: relative;height: 380px;">
     <div id="map" style="cursor:move;margin: 5px;position: absolute;top: 3px;left: 2px;">
-      <img id="current_map" src="/images/maps/long_cun_zheng_2.jpg" alt="map1" style="position: absolute;" />
+      <!--<img id="current_map" src="/images/maps/long_cun_zheng_2.jpg" alt="map1" style="position: absolute;" />-->
+      <img id="current_map" src="/images/maps/map1.png" alt="map1" width="720px" height="360px" style="position: absolute;" />
       <div id="box" style="position: absolute;width:720px;height: 360px;"></div>
-      <!--<img id="current_map" src="/images/maps/map1.png" alt="map1" />-->
     </div>
     <div id="playboard" from_color="#3B3A3A" to_color="#5C5A5A" style="height:366px;width: 725px;border: 2px solid #3B3A3A;position: absolute;top: 0px;left: 0px;z-index: -1;"></div>
     <div id="playboard_outer" from_color="#3B3A3A" to_color="#5C5A5A" style="position: absolute;height:366px;width: 725px;border: 2px solid #3B3A3A;top: 6px;left: 5px;z-index: -1;"></div>
