--- a/app/views/layouts/_game.html.erb
+++ b/app/views/layouts/_game.html.erb
@@ -3,7 +3,7 @@
   </div>
   <div id="menu" style="float:right;height: 50px;">
     <a id="login_btn" style="color:white;" href="javascript: void(0);">登录</a>
-    <a style="color:white;" href="javascript: void(0);">注册</a>
+    <a id="signup_btn" style="color:white;" href="javascript: void(0);">注册</a>
     <a style="color:white;" href="/logout">Logout</a>
   </div>
   <div id="hp_container" style="margin: 10px 0;clear:both;">
@@ -21,12 +21,27 @@
     <div id="playboard_outer" from_color="#3B3A3A" to_color="#5C5A5A" style="position: absolute;height:366px;width: 725px;border: 2px solid #3B3A3A;top: 6px;left: 5px;z-index: -1;"></div>
   </div>
 
-  <div id="loginbox" style="opacity: .8; position: absolute;display:none;width:200px;height:100px;border:1px purple solid;top:200px;left:400px;">
+  <div id="loginbox" style="opacity: .8; position: absolute;display:none;width:200px;padding:5px;border:1px purple solid;top:200px;left:400px;">
     <form action="/sessions" id="login_form" method="post" onsubmit="return false;">
       <label style="color:white;">用户名</label>
       <input class="login_name" style="margin:5px;" type="text" name="login" /> <br/>
       <label style="color:white;">密码</label>
       <input class="login_password" style="margin:5px;" type="password" name="password" />
+      <input type="button" value="login" id="signin_submit" />
+    </form>
+  </div>
+
+  <div id="signupbox" style="opacity: .8; position: absolute;display:none;width:200px;padding:5px;border:1px purple solid;top:200px;left:400px;">
+    <form action="/members" id="signup_form" method="post" >
+      <label style="color:white;">Email</label>
+      <input  style="margin:5px;" type="text" name="member[email]" /> <br/>
+      <label style="color:white;">用户名</label>
+      <input  style="margin:5px;" type="text" name="member[login]" /> <br/>
+      <label style="color:white;">密码</label>
+      <input  style="margin:5px;" type="password" name="member[password]" />
+      <label style="color:white;">密码确认</label>
+      <input  style="margin:5px;" type="password" name="member[password_confirmation]" />
+      <input type="button" value="register" id="signup_submit" />
     </form>
   </div>
 
